Revision history for Perl extension Weather::YR.

0.42  2021-10-13
      - Use Dist::Zilla::Plugin::ReadmeAnyFromPod to generate the README at
        build time.

0.41  2021-10-13
      - Updated the README with the correct documentation.

0.40  2021-10-13
      - Added support for English symbol names.
      - Fixed a deep recursion bug.

0.39  2021-10-13
      - Updated to support API v2.0.

0.38  2016-05-27
      - Fixed an error in the documentation.

0.37  2016-05-27
      - Changed to use the new end point URL; http://api.met.no/
      - Replaced XML::Bare with XML::Simple.
      - Misc. code cleanup.

0.36  2015-04-17
      - Fix: Pass on the 'ua' parameter to Weather::Yr::Base when instantiating
        the YR object.

0.35  2015-02-12
      - The 'ua' parameter can now be anything, as long as it is compatible
        with the LWP::UserAgent API.

0.34  2015-01-13
      - Better error-handling when creating datapoints.
      - Removed alpha status; current API is OK to use in production.

0.33  2015-01-08
      - Added XML schema validation for location forecast.

0.32  2014-08-25
      - Improved the documentation.

0.31  2014-08-21
      - Weather::YR now requires Perl version 5.10 or later.
      - Added support for accessing wind directions and wind speeds for any
        given day.
      - Added support for accessing humidity for any given day.
      - Added support for accessing (air) pressure for any given day.
      - Added support for accessing cloudiness for any given day.
      - Added support for accessing fog for any given day.
      - Added support for accessing dew point temperature for any given day.
      - Added support for accessing wind and temperature probability for any
        given data point.

0.30  2014-08-20
      - Module rewritten from scratch for better extensibility.

0.25  2012-01-20
      - Fix: CPAN issue #74112: Misuse of length on array.

0.24  2011-12-18
      - Fix: YR API Location Forecast updated to version 1.8.